--- a/source/main-page.html
+++ b/source/main-page.html
@@ -753,15 +753,17 @@
             <div class="public-debate__date-wrapper">
               <span class="public-debate__date date">Дата проведения:<time
                   datetime="2020-12-29">29.12.2020</time></span>
-              <span class="public-debate__status project-status">Подготовка к
-                проведению слушаний</span>
-              <div class="public-debate__joined join-indicator"
-                data-tooltip="Участие принято" data-flow="down">
-                <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                </svg>
-                <span class="join-indicator__tooltip">Участие принято</span>
+              <div class="join-indicator-wrapper">
+                <span class="public-debate__status project-status">Подготовка к
+                  проведению слушаний</span>
+                <div class="public-debate__joined join-indicator"
+                  data-tooltip="Участие принято" data-flow="down">
+                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                  </svg>
+                  <span class="join-indicator__tooltip">Участие принято</span>
+                </div>
               </div>
             </div>
             <a href="#" class="public-debate__link project-link">Реконструкция
@@ -779,16 +781,18 @@
             <div class="public-debate__date-wrapper">
               <span class="public-debate__date date">Дата проведения:<time
                   datetime="2020-12-29">29.12.2020</time></span>
-              <span
-                class="public-debate__status project-status status-color--orange">Подведение
-                итогов</span>
-              <div class="public-debate__joined join-indicator"
-                data-tooltip="Участие принято" data-flow="down">
-                <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                </svg>
-                <span class="join-indicator__tooltip">Участие принято</span>
+              <div class="join-indicator-wrapper">
+                <span
+                  class="public-debate__status project-status status-color--orange">Подведение
+                  итогов</span>
+                <div class="public-debate__joined join-indicator"
+                  data-tooltip="Участие принято" data-flow="down">
+                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                  </svg>
+                  <span class="join-indicator__tooltip">Участие принято</span>
+                </div>
               </div>
             </div>
             <a href="#" class="public-debate__link project-link">Государственное
@@ -807,17 +811,19 @@
             <div class="public-debate__date-wrapper">
               <span class="public-debate__date date">Дата проведения:<time
                   datetime="2020-12-29">29.12.2020</time></span>
-              <span
-                class="public-debate__status project-status status-color--blue">Идет
-                прием мнений</span>
-              <div
-                class="public-debate__joined public-debate__joined--visible join-indicator"
-                data-tooltip="Участие принято" data-flow="down">
-                <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                </svg>
-                <span class="join-indicator__tooltip">Участие принято</span>
+              <div class="join-indicator-wrapper">
+                <span
+                  class="public-debate__status project-status status-color--blue">Идет
+                  прием мнений</span>
+                <div
+                  class="public-debate__joined public-debate__joined--visible join-indicator"
+                  data-tooltip="Участие принято" data-flow="down">
+                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                  </svg>
+                  <span class="join-indicator__tooltip">Участие принято</span>
+                </div>
               </div>
             </div>
             <a href="#" class="public-debate__link project-link">Государственное
@@ -835,17 +841,19 @@
             <div class="public-debate__date-wrapper">
               <span class="public-debate__date date">Дата проведения:<time
                   datetime="2020-12-29">29.12.2020</time></span>
-              <span
-                class="public-debate__status project-status status-color--green">Подготовка
-                к проведению слушаний</span>
-              <div
-                class="public-debate__joined public-debate__joined--visible join-indicator"
-                data-tooltip="Участие принято" data-flow="down">
-                <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                </svg>
-                <span class="join-indicator__tooltip">Участие принято</span>
+              <div class="join-indicator-wrapper">
+                <span
+                  class="public-debate__status project-status status-color--green">Подготовка
+                  к проведению слушаний</span>
+                <div
+                  class="public-debate__joined public-debate__joined--visible join-indicator"
+                  data-tooltip="Участие принято" data-flow="down">
+                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                  </svg>
+                  <span class="join-indicator__tooltip">Участие принято</span>
+                </div>
               </div>
             </div>
             <a href="#" class="public-debate__link project-link">Реконструкция
@@ -863,15 +871,17 @@
             <div class="public-debate__date-wrapper">
               <span class="public-debate__date date">Дата проведения:<time
                   datetime="2020-12-29">29.12.2020</time></span>
-              <span class="public-debate__status project-status">Подготовка к
-                проведению слушаний</span>
-              <div class="public-debate__joined join-indicator"
-                data-tooltip="Участие принято" data-flow="down">
-                <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
-                  xmlns="http://www.w3.org/2000/svg">
-                  <use xlink:href="img/sprite.svg#icon-lightning"></use>
-                </svg>
-                <span class="join-indicator__tooltip">Участие принято</span>
+              <div class="join-indicator-wrapper">
+                <span class="public-debate__status project-status">Подготовка к
+                  проведению слушаний</span>
+                <div class="public-debate__joined join-indicator"
+                  data-tooltip="Участие принято" data-flow="down">
+                  <svg width="12" height="16" viewBox="0 0 12 16" fill="none"
+                    xmlns="http://www.w3.org/2000/svg">
+                    <use xlink:href="img/sprite.svg#icon-lightning"></use>
+                  </svg>
+                  <span class="join-indicator__tooltip">Участие принято</span>
+                </div>
               </div>
             </div>
             <a href="#" class="public-debate__link project-link">Государственное
