--- a/source/project-page.html
+++ b/source/project-page.html
@@ -217,7 +217,7 @@
 
             <div class="project-vote__container project-vote__container--vote">
               <p class="project-vote__notion project-vote__notion--single">
-                У&nbsp;данного проекта есть <a class="project-vote__notion--link link link--blue" href="#project-page-tabs">дополнительные опции</a>. Выбранные опции будут учтены только при голосовании в&nbsp;поддержку проекта.
+                У&nbsp;данного проекта есть <a class="project-vote__notion project-vote__notion--link link link--blue" href="#project-page-tabs">дополнительные опции</a>. Выбранные опции будут учтены только при голосовании в&nbsp;поддержку проекта.
               </p>
             </div>
 
@@ -561,6 +561,7 @@
                       </div>
                       <input type="radio" name="project-radio-image-one-1" id="project-radio-image-1-1" value="project-radio-image-1-1">
                       <label for="project-radio-image-1-1">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/radio-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -573,6 +574,7 @@
                       </div>
                       <input type="radio" name="project-radio-image-one-1" id="project-radio-image-1-2" value="project-radio-image-1-2" checked>
                       <label for="project-radio-image-1-2">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/radio-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -585,6 +587,7 @@
                       </div>
                       <input type="radio" name="project-radio-image-one-1" id="project-radio-image-1-3" value="project-radio-image-1-3">
                       <label for="project-radio-image-1-3">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/radio-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -619,6 +622,7 @@
                       </div>
                       <input type="checkbox" name="project-interaction-1-5" id="project-interaction-1-5" value="project-interaction-1-5">
                       <label for="project-interaction-1-5">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/checkbox-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -631,6 +635,7 @@
                       </div>
                       <input type="checkbox" name="project-interaction-1-6" id="project-interaction-1-6" value="project-interaction-1-6">
                       <label for="project-interaction-1-6">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/checkbox-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -643,6 +648,7 @@
                       </div>
                       <input type="checkbox" name="project-interaction-1-7" id="project-interaction-1-7" value="project-interaction-1-7">
                       <label for="project-interaction-1-7">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/checkbox-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -655,6 +661,7 @@
                       </div>
                       <input type="checkbox" name="project-interaction-1-8" id="project-interaction-1-8" value="project-interaction-1-8">
                       <label for="project-interaction-1-8">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/checkbox-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -667,6 +674,7 @@
                       </div>
                       <input type="checkbox" name="project-interaction-1-9" id="project-interaction-1-9" value="project-interaction-1-9">
                       <label for="project-interaction-1-9">
+                        <span class="visually-hidden">Выбрать данную опцию</span>
                         <include src="source/components/checkbox-button-svg.html"></include>
                       </label>
                       <include src="source/components/zoom-button.html"></include>
@@ -1071,7 +1079,7 @@
             </div>
           </div>
 
-          <div class="proposal__projectstab project-page__project-options proposal__tab-item proposal__tab-item--active">
+          <div class="project-page__tab-wrapper proposal__projectstab project-page__project-options proposal__tab-item proposal__tab-item--active">
             <h2>Выберите дополнительные опции реализации данного проекта</h2>
 
             <div class="project-page__form">
@@ -1122,6 +1130,7 @@
                         </div>
                         <input type="radio" name="project-radio-image-one" id="project-radio-image-1" value="project-radio-image-1">
                         <label for="project-radio-image-1">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/radio-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
@@ -1134,6 +1143,7 @@
                         </div>
                         <input type="radio" name="project-radio-image-one" id="project-radio-image-2" value="project-radio-image-2" checked>
                         <label for="project-radio-image-2">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/radio-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
@@ -1146,6 +1156,7 @@
                         </div>
                         <input type="radio" name="project-radio-image-one" id="project-radio-image-3" value="project-radio-image-3">
                         <label for="project-radio-image-3">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/radio-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
@@ -1180,6 +1191,7 @@
                         </div>
                         <input type="checkbox" name="project-interaction-5" id="project-interaction-5" value="project-interaction-5">
                         <label for="project-interaction-5">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/checkbox-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
@@ -1192,6 +1204,7 @@
                         </div>
                         <input type="checkbox" name="project-interaction-6" id="project-interaction-6" value="project-interaction-6">
                         <label for="project-interaction-6">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/checkbox-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
@@ -1204,6 +1217,7 @@
                         </div>
                         <input type="checkbox" name="project-interaction-7" id="project-interaction-7" value="project-interaction-7">
                         <label for="project-interaction-7">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/checkbox-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
@@ -1216,6 +1230,7 @@
                         </div>
                         <input type="checkbox" name="project-interaction-8" id="project-interaction-8" value="project-interaction-8">
                         <label for="project-interaction-8">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/checkbox-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
@@ -1228,6 +1243,7 @@
                         </div>
                         <input type="checkbox" name="project-interaction-10" id="project-interaction-10" value="project-interaction-10">
                         <label for="project-interaction-10">
+                          <span class="visually-hidden">Выбрать данную опцию</span>
                           <include src="source/components/checkbox-button-svg.html"></include>
                         </label>
                         <include src="source/components/zoom-button.html"></include>
